landing page fixed white box stuff and some alignment

--- a/var/www/csc342/LandingPage.css
+++ b/var/www/csc342/LandingPage.css
@@ -24,13 +24,11 @@ ol li {
 
 .button {
    border-top: 1px solid #96d1f8;
-   background: #65a9d7;
-   padding: 5px 10px;
-   border-radius: 8px;
-   box-shadow: rgba(0,0,0,1) 0 1px 0;
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+  background: #2275BB;
+   padding: 0.4em;
+   border-radius: 5px;
    color: white;
-   font-size: 28px;
+   font-size: 32px;
    font-family: Georgia, serif;
    text-decoration: none;
    vertical-align: middle;
@@ -44,6 +42,7 @@ ol li {
    border-top-color: #1b435e;
    background: #1b435e;
    }
+  
 
 #specific {
 	background: #2275BB;
@@ -56,7 +55,7 @@ ol li {
 	font-weight: normal;
 	min-height: 80px;
 	overflow: visible;
-	color: 	#FFFAF0;
+	color:  #FFFAF0;
 	font-family: Verdana, Arial, Sans-Serif;
 }
 
